--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "plan-processos",
   "version": "0.1.0",
@@ -6,6 +5,7 @@
   "dependencies": {
     "admin-lte": "2.3.6",
     "ionicons": "^4.5.6",
+    "pubsub-js": "^1.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
